# AKF

./: .cursorrules  .gitignore  AKF-Complete-Guide.docx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH-PLAYBOOK.md  LICENSE  README.md  demo-report.md
python/: README.md  pyproject.toml
python/akf/: __init__.py  _auto.py  a2a_bridge.py  agent.py  agent_card.py  ai_detect.py  builder.py  certify.py  check.py  cli.py  cli.py.akf.json  compliance.py  context.py  core.py  daemon.py  data.py  delegation.py  deps.py  detection.py  fs_events.py  i18n.py  init_setup.py  knowledge_base.py  models.py  presets.py  provenance.py  report.py  report.py.akf.json  security.py  shell_hook.py  shell_hook.py.akf.json  sidecar.py  stamp.py  streaming.py  team_stream.py  transform.py  trust.py  universal.py  verify.py  view.py  (+1 more)
python/tests/: test_a2a_bridge.py  test_agent.py  test_agent_card.py  test_ai_detect.py  test_aliases.py  test_audio.py  test_auto_service.py  test_badge.py  test_builder.py  test_check.py  test_cli.py  test_compliance.py  test_compliance_enhanced.py  test_context.py  test_core.py  test_cross_flow.py  test_daemon.py  test_data.py  test_delegation.py  test_delta_cli.py  test_delta_freshness.py  test_delta_generation_params.py  test_delta_security_report.py  test_delta_size_benchmarks.py  test_delta_trust_origin.py  test_deps.py  test_detection.py  test_e2e_agent_platforms.py  test_e2e_certify.py  test_e2e_integration.py  test_e2e_smart_context.py  test_e2e_woodgrove.py  test_enhanced_trust.py  test_evidence.py  test_fs_events.py  test_i18n.py  (+28 more)
(+235 files in other folders)
